# agentos

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  dev.sh  docker-compose.dev.noauth.yml  docker-compose.dev.yml  docker-compose.yml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-production.yml  deploy-staging.yml  uv-lock-upgrade.yml
agents_config/: README.md
backend/: Dockerfile  pyproject.toml
backend/agentos/: config.py  database.py  main.py  models.py
backend/agentos/agents/: builtin.py  code_review.py  portfolio_updater.py
backend/agentos/api/: agents.py  api_keys.py  auth.py  deps.py  execute.py  knowledge_agents.py  runs.py  schedules.py  stats.py  stream.py  webhooks.py
backend/agentos/runner/: __init__.py  anthropic.py  claude_code.py  knowledge.py
backend/agentos/tools/: __init__.py  filesystem.py  github.py  notifications.py  web.py
backend/agentos/worker/: scheduler.py  tasks.py
backend/scripts/: seed_dev.py
backend/tests/: conftest.py  test_agents_api.py  test_api_keys_api.py  test_execute_api.py  test_health_api.py  test_knowledge_agents_api.py  test_models.py  test_portfolio_updater.py  test_runs_api.py  test_stats_api.py  test_tools_filesystem.py  test_worker_task.py  test_yaml_agent_loader.py
caddy/: Caddyfile
docs/: deployment.md  external-api.md
frontend/: .env.local.example  Dockerfile  Dockerfile.dev  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: LogStream.tsx  LogoutButton.tsx
frontend/lib/: api.ts  (+1 more)
(+11 files in other folders)
